[tool.poetry]
name = "injectpy"
version = "0.1.0"
description = ""
authors = ["edoardo.scarpaci <edoardo.scarpaci@gmail.com>"]
readme = "README.md"
packages = [{ include = "injectpy" }]

[tool.poetry.dependencies]
python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"